Updated from official site

--- a/about/certifications/index.html
+++ b/about/certifications/index.html
@@ -32,8 +32,7 @@
       <h1>My Certifications</h1>
 
       <ol>
-        <li><a href="./responsive_web_design/">Responsive Web Design</a></li>
-        <li><a href="./js_algorithms_data_structures/">Javascript Algorithms & Data Structures</a></li>
+        <li><a href="./responsive_web_design.html">Responsive Web Design</a></li>
       </ol>
 
     </article>
