--- a/about/certifications/responsive_web_design.html
+++ b/about/certifications/responsive_web_design.html
@@ -27,7 +27,7 @@
 
   <main>
 
-    <a class="main--back-link" href="../">Back to Certifications</a>
+    <a class="main--back-link" href="./">Back to Certifications</a>
 
     <img class="banner" src="/images/jackson-sophat-HTML.jpg" alt="Responsive Web Design Banner">
 
@@ -46,20 +46,6 @@
       </blockquote>
 
       <a class="button-link" href="https://www.freecodecamp.org/certification/fffade/responsive-web-design" target="_blank"><button>Open Certification</button></a>
-
-    </article>
-
-    <article>
-
-      <h2>Related Projects</h2>
-
-      <ul>
-        <li><a href="./related/build_a_survey_form/" target="_blank">Build a Survey Form</a></li>
-        <li><a href="./related/build_a_tribute_page/" target="_blank">Build a Tribute Page</a></li>
-        <li><a href="./related/build_a_technical_documentation/" target="_blank">Build a Technical Documentation Page</a></li>
-        <li><a href="./related/build_a_product_landing_page/" target="_blank">Build a Product Landing Page</a></li>
-        <li><a href="./related/build_a_personal_portfolio/" target="_blank">Build a Personal Portfolio Webpage</a></li>
-      </ul>
 
     </article>
 
