--- a/about/index.html
+++ b/about/index.html
@@ -16,9 +16,10 @@
   <link rel="stylesheet" href="/styles.css">
 
   <!-- Import React-->
-  <script type="application/javascript" src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script> 
+  <script type="application/javascript" src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
   <script type="application/javascript" src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
   <script type="application/javascript" src="https://unpkg.com/babel-standalone@6.26.0/babel.js"></script>
+  <script type="text/babel" src="/components/contactme_dialog.js"></script>
 
 </head>
 <body>
@@ -39,11 +40,9 @@
 
 
     <article>
-      <h2>Important Links</h2>
-
       <ul>
         <li><a href="/projects/">See my projects</a></li>
-        <li><a href="./certifications/">See my certifications</a></li>
+        <li><a href="/certifications/">See my certifications</a></li>
       </ul>
     </article>
 
