--- a/certifications/index.html
+++ b/certifications/index.html
@@ -16,10 +16,11 @@
   <link rel="stylesheet" href="/styles.css">
 
   <!-- Import React-->
-  <script type="application/javascript" src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script> 
+  <script type="application/javascript" src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
   <script type="application/javascript" src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
   <script type="application/javascript" src="https://unpkg.com/babel-standalone@6.26.0/babel.js"></script>
-
+  <script type="text/babel" src="/components/contactme_dialog.js"></script>
+  
 </head>
 <body>
 
@@ -33,6 +34,7 @@
 
       <ol>
         <li><a href="./responsive_web_design.html">Responsive Web Design</a></li>
+        <li><a href="./js_algorithms_and_data_structures.html">JavaScript Algorithms and Data Structures</a></li>
       </ol>
 
     </article>
