--- a/certifications/responsive_web_design.html
+++ b/certifications/responsive_web_design.html
@@ -10,15 +10,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
 
-  <title>About Omar Johnson - Responsive Web Design Certification</title>
+  <title>Omar Johnson | Responsive Web Design Certification</title>
 
   <!-- Styling -->
   <link rel="stylesheet" href="/styles.css">
 
   <!-- Import React-->
-  <script type="application/javascript" src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script> 
+  <script type="application/javascript" src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
   <script type="application/javascript" src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
   <script type="application/javascript" src="https://unpkg.com/babel-standalone@6.26.0/babel.js"></script>
+  <script type="text/babel" src="/components/contactme_dialog.js"></script>
 
 </head>
 <body>
