--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="styles.css">
 
   <!-- Import React-->
-  <script type="application/javascript" src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script> 
+  <script type="application/javascript" src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
   <script type="application/javascript" src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
   <script type="application/javascript" src="https://unpkg.com/babel-standalone@6.26.0/babel.js"></script>
 
@@ -27,9 +27,9 @@
   <header id="react-header"></header>
 
   <main>
-    
+
     <article>
-      <div class="notice"> 
+      <div class="notice">
         <h3>Notice:</h3>
         <p>This portfolio website is a work in progress. Some elements may lack functionality or content.</p>
       </div>
@@ -56,9 +56,12 @@
 
   <footer id="react-footer"></footer>
 
+  <div id="contact-dialog"></div>
+
   <!-- Import components -->
   <script type="text/babel" src="/components/header.js"></script>
   <script type="text/babel" src="/components/footer.js"></script>
+  <script type="text/babel" src="/components/contactme_dialog.js"></script>
 
 </body>
 </html>
