--- a/projects/index.html
+++ b/projects/index.html
@@ -16,9 +16,10 @@
   <link rel="stylesheet" href="/styles.css">
 
   <!-- Import React-->
-  <script type="application/javascript" src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script> 
+  <script type="application/javascript" src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
   <script type="application/javascript" src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
   <script type="application/javascript" src="https://unpkg.com/babel-standalone@6.26.0/babel.js"></script>
+  <script type="text/babel" src="/components/contactme_dialog.js"></script>
 
 </head>
 <body>
@@ -33,11 +34,17 @@
 
     </article>
 
+    <!-- Gallery grid for projects -->
     <article class="gallery square">
 
       <figure class="zoom-enabled">
         <a href="./javascript/"><img src="/images/javascript-programming-language-icon.webp" alt="Javascript Logo" loading="lazy"></a>
         <figcaption><p><a href="./javascript/">Web Demonstrations</a></p></figcaption>
+      </figure>
+
+      <figure class="zoom-enabled">
+        <a href="https://github.com/fffade/MoffatBay"><img src="/images/Moffat_Bay.jpg" alt="Moffat Bay Resort" loading="lazy"></a>
+        <figcaption><p><a href="https://github.com/fffade/MoffatBay">Moffat Bay (Java)</a></p></figcaption>
       </figure>
 
     </article>
@@ -47,7 +54,7 @@
       <h2>Still can't get enough?</h2>
 
       <p>
-        No worries. This catalog of projects is limited for portfolio reasons. My full
+        Don't panic. This catalog of projects is limited for portfolio reasons. My full
         selection of public projects is over on my professional site at <a href="#">tba</a>.
       </p>
 
